style.css
html,
body {
  padding: 2pt;
  margin: 0px;
  height: calc(100vh - 4pt);
  width: calc(100vw - 4pt);
  min-height: 500px;
  background-color: lightsteelblue;
}

/*Grid Item*/
.config_buttons{
  grid-area: config;
  display: inline-flex;
  flex-wrap: nowrap;
}

.hamburger { 
  grid-area: hamburger; 
  text-align: center;
}
.playPause { 
  grid-area: playPause; 
  text-align: center;
}

.title { grid-area: title; }

.selector { 
  display: flex;
  grid-area: selector;
  /*display: flex;*/
  flex-flow: column;
  height: 100%;
}
.graphic { grid-area: graphic; }

* {
  box-sizing: border-box;
}

.margin_zero{
  margin-right: 0px;
  margin-left: 0px;
}

/* Grid Container*/
.grid-container {
  display: grid;
  height: 100%;
  width: 100%;
  grid-gap: 4pt 4pt;
  grid-template-columns: minmax(300px, 300px) 50px 132px minmax(405px, 95%) 150px;
  grid-template-rows: 50px minmax(100px, calc(100% - 50px));
  grid-template-areas:
    "config hamburger playPause title jukebox"
		"selector graphic graphic graphic graphic"
    ;
  background-color: lightsteelblue;
}

/* Grid Item */
.item {
  background-color: rgba(255, 255, 255, 0.8);
}

.config_buttons>*{
  display: flex; 
  flex-direction: column; 
  height: 100%;
  flex-grow: 1;
}

.config_buttons>*>*{
  height: 100%;
}

.item.title{
  text-align: center;
}

.item.title p{
  text-align: center;
  margin-top: 5px;
  margin-bottom: 5px;
}

.selector_input{
  display: inline-block; 
  border-style: solid;
  border-width: 1px;
  border-radius: 5px;
  margin-left: 0px;
  margin-right: 0px;
  padding-left: 0px;
  padding-right: 0px;
}

#speed_box{
  display: flex;
  flex-wrap: wrap;
  border-style: solid;
  border-width: 1px;
  border-radius: 5px;
  height: 100%;
}

.input_Xn #conic_type{
  text-align: center;
  width: 22px;
  border-style: solid;
  border-width: 2px;
  margin-right: 1px;
  margin-left: 1px;
};

.input_Xn{
  margin-left: 0px;
  margin-right: 0px;
  display: inline-flex;
  height: auto;
}

.input_Xn>*{
  margin-right: auto;
  margin-left: auto;
}

.locus_type>*{
  font-size: 11px;
}

.tri_type{
  margin-left: 2px;
  margin-right: 2px;
  font-size: 11px;
}

#demo_a{
  display: block;
  width: 40px;
}

p.lab{
  text-align: center;
}

#a{
  margin-bottom: 10px;
  width: 98%;
}

.a_text_input{
  font-size: 12px;
  border-style: solid;
  border-width: 1px;
  width: 37px;
  height: 20px;
  margin-top: auto;
  margin-bottom: auto;
  margin-left: 3px;
  margin-right: 3px;
}

.width100{
  display: block;
  width: 90%;
  margin-left: auto;
  margin-right: auto;
}

/*end menu*/

.chk {
  font-size: 14px;
}

.chkBold {
  font-weight: bold;
  font-size: 14px;
}

.lab {
  font-size: 16px;
  font-weight: bold;
}

.play_controls{
  margin-left: 3px;
  margin-right: 3px;
}

.play_controls button{
  position: relative;
  display: inline-block;
  padding-left: 0px;
  padding-right: 0px;
  height: 100%;
  background: none !important;
  border:none;
  outline: none;
  font-size: 40px;
}

.play_controls button > *{
  position: absolute;
  top: 50%;
  left: 50%;
}

.play_controls button:focus,
.play_controls button:active {
  outline: none;
}

#export_button{
  height: 25px;
  margin-bottom: 5px;
}

/*title*/
.title>*{
  margin-left: auto;
  margin-right: auto;
}

.bg{
  height: 20px;
  width: 25px;
  border: none;
  outline: none;
  -webkit-appearance: none;
}

.bg::-webkit-color-swatch-wrapper {
  padding: 0;	
}

/*Selector menu styles*/
.component.xn_selector{
    display: flex; 
    flex-direction: column;
    border-style: solid;
    border-width: 1px;
    border-radius: 5px;
}

.input_Xn{
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    margin-bottom: 2px;
    margin-top: 2px;
}

.demo_Xn{
    border-style: solid;
    border-width: 1px;
    width: 40px;
    height: 20px;
    margin-top: auto;
    margin-bottom: auto;
    margin-left: 3px;
}

.demo_Pn{
  color: gray;
  border-style: solid;
  border-width: 1px;
  width: 40px;
  height: 20px;
  margin-top: auto;
  margin-bottom: auto;
  margin-left: 3px;
}

p{
    display: block;
    margin-top: auto;
    margin-bottom: auto;
}

select{
    display: inline-block;
    height: 20px;
    margin-top: auto;
    margin-bottom: auto;
    margin-left: 2px;
    margin-right: 2px;
}

label{
    font-size: 15px;
    margin-top: auto;
    margin-bottom: auto;
}

.sub_checkbox {
    display: inline-block;
    vertical-align: middle;
    margin-left: 0px;
}

label{
    display: inline-block;
    vertical-align: middle;
}

/*slider's*/

/* The slider itself */
/*
#Xn1::-webkit-slider-thumb{
  background: '[100,100,10000]';
}

#Xn2::-webkit-slider-thumb{
  background: green;
}

#Xn3::-webkit-slider-thumb{
  background: blue;
}

#Xn4::-webkit-slider-thumb{
  background: purple;
}
*/

.jukebox_img{
  margin-left:5px;
  margin-right:5px;
  height:51px;
  width:34px; 
}

#jukebox_playlist{
  font-size: 11px;
  width: 95%;
}

.slider {
    -webkit-appearance: none;
    width: 97%;
    height: 5px;
    border-radius: 5px;  
    background: #d3d3d3;
    outline: none;
    opacity: 0.7;
    -webkit-transition: .2s;
    transition: opacity .2s;
    margin-top: auto;
    margin-bottom: auto;
}

/* Mouse-over effects */
.slider:hover {
  opacity: 1; /* Fully shown on mouse-over */
}

/* The slider handle (use -webkit- (Chrome, Opera, Safari, Edge) and -moz- (Firefox) to override default look) */
.slider::-webkit-slider-thumb {
    -webkit-appearance: none;
    appearance: none;
    width: 15px;
    height: 15px;
    border-radius: 50%; 
    background: black;
    cursor: pointer;
}
  
.slider::-moz-range-thumb {
    width: 25px;
    height: 25px;
    border-radius: 50%;
    background: #4CAF50;
    cursor: pointer;
}

.plus_minus {
    background: none !important;
    padding: 0px;
    margin-right: 3px;
    border:none;
    height: 100%;
    width: 10px;
    font-size: 15px;
}

.plus {
  margin-left: 3px;
}

.minus {
  margin-left: 2px;
}

.plus_minus:focus,
.plus_minus:active {
    outline: none;
}

.slider_container{
    flex-grow: 1;
    height: auto;
}

#input_text{
    display: inline-flex;
    margin-right: 2px;
}

.P_input_text{
  display: inline-flex;
  margin-left: 0px;
  margin-right: 4px;
}

.input_mounting{
    display: inline-flex;
    height: 100%;
    margin-right: 0px;
    width: 70px;
}

.input_mounting>select{
    width: 100%;
}

.input_mounting>*{
  font-size: 11px;
}

.small_button{
    font-size: 11px;
    width: 35px;
    flex-grow: 1;
    margin-right: auto;
    margin-left: auto;
    padding: 0px
};

.circ{
  font-size: 5px;
  display: inline-block;
  height: 100%;
  width: 40px;
}
.circ>*{
  font-size: 11px;
}

.inv{
  display: inline-flex;
  margin-left:1px;
  margin-right:1px;
  width: 10px;
}

.inv>*{
  font-size: 11px;
}

#menuHamburguer{
  font-size: 30px;
  color: black;
  height: 50px;
  padding: 10px 10px;
  display: block;
  margin-left: auto;
  margin-right: auto;
}

